# sentinel-audit

./: .gitignore  LICENSE  README.md  pyproject.toml  steps.md
basics/: analyzer.py
benchmarks/: coinflip_report.md
utils/: anthropic_utils.py  constants.py  groq_client.py  groq_utils.py  initializer.py  llm.py  llm_metrics.py  log_util.py  metrics.py  openai_utils.py
