[project]
name = "sentinel-audit"
version = "0.1.0"
description = "Agentic Auditing"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "aiohttp>=3.13.3",
    "concurrent-log-handler>=0.9.28",
    "groq>=1.0.0",
    "mcp[cli]>=1.26.0",
    "prometheus-client>=0.24.1",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.1",
]
